--- a/excel_comp/base/templates/base.html
+++ b/excel_comp/base/templates/base.html
@@ -5,8 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
+    />
   </head>
+  <style>
+    .container {
+      padding-top: 30px;
+    }
+    .table-container {
+      padding: 30px;
+      border: 1px solid rgba(0, 0, 0, 0.1);
+      margin: 0px;
+    }
+    .table {
+      border: 1px solid rgba(0, 0, 0, 0.1);
+      margin: 0px;
+      padding: 0px;
+    }
+  </style>
   <body>
-    {% block content%} {% endblock %}
+    <div class="container">{% block content%} {% endblock %}</div>
   </body>
+  <!-- JavaScript Bundle with Popper -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"
+  ></script>
 </html>
