--- a/excel_comp/base/templates/base.html
+++ b/excel_comp/base/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -16,6 +17,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
     />
+    <!-- <link rel="stylesheet" href="{% static 'css/main.css' %}" /> -->
+    <span>{% include 'components/styles.html' %} </span>
   </head>
   <style>
     .container {
@@ -33,7 +36,12 @@
     }
   </style>
   <body>
-    <div class="container">{% block content%} {% endblock %}</div>
+    <span>{% include 'components/navbar.html' %} </span>
+    <div class="container pt-0 d-flex">
+      <span>{% include 'components/sidebar.html' %}</span>
+      <span class="main-bar">{% block content %} {% endblock %}</span>
+    </div>
+    <span>{% include 'components/footer.html' %}</span>
   </body>
   <!-- JavaScript Bundle with Popper -->
   <script
