--- a/excel_comp/base/templates/pages/documentation.html
+++ b/excel_comp/base/templates/pages/documentation.html
@@ -1,3 +1,3 @@
 {% extends 'base.html' %} {% block content %}
-<h3>{{request.user.username}}'s profile</h3>
+<h3>Documentation page</h3>
 {% endblock %}
