--- a/excel_comp/base/templates/pages/profile.html
+++ b/excel_comp/base/templates/pages/profile.html
@@ -1,3 +1,15 @@
 {% extends 'base.html' %} {% block content %}
-<h3>{{request.user.username}}'s profile</h3>
+<div class="d-flex align-items-center">
+  <img
+    src="{{request.user.image.url}}"
+    alt=""
+    style="
+      width: 80px;
+      border: 1px solid rgba(0, 0, 0, 0.3);
+      border-radius: 50%;
+    "
+  />
+  <h3 class="ms-3">{{request.user.username}}'s profile</h3>
+</div>
+<a href="{% url 'update_profile_page' %}">Update Your Profile</a>
 {% endblock %}
