--- a/excel_comp/base/templates/pages/register.html
+++ b/excel_comp/base/templates/pages/register.html
@@ -1,7 +1,15 @@
 {% extends 'base.html' %} {% block content %}
-<h3>Register page</h3>
 <form method="POST">
+  <div class="d-block text-center">
+    <h3 class="m-0 p-0 mb-3">Create An Account</h3>
+  </div>
   {% csrf_token %} {{form.as_p}}
   <button>Register</button>
+  <div class="d-block text-center mt-3">
+    <small
+      >Already have an account?
+      <a href="{% url 'login_page' %}">Sign In</a></small
+    >
+  </div>
 </form>
 {% endblock %}
