--- a/excel_comp/base/templates/pages/view_csv.html
+++ b/excel_comp/base/templates/pages/view_csv.html
@@ -1,4 +1,11 @@
 {% extends 'base.html' %} {% block content %}
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
 <div class="table-container">
   <div class="d-flex align-items-center justify-content-between mb-3">
     <h3 class="m-0">Welcome {{request.user.username}}</h3>
