--- a/excel_comp/base/templates/components/styles.html
+++ b/excel_comp/base/templates/components/styles.html
@@ -83,12 +83,23 @@
     text-decoration: none;
     color: rgb(37, 111, 101);
   }
+  .screen-img {
+    width: 700px;
+    margin: auto;
+  }
   @media screen and (max-width: 960px) {
     .main-footer {
       display: block;
     }
     form {
       width: 100%;
+    }
+    .screen-img {
+      width: 100%;
+    }
+    .table-container {
+      width: 1000px;
+      overflow-x: scroll;
     }
   }
 </style>
