--- a/excel_comp/base/templates/pages/view_csv.html
+++ b/excel_comp/base/templates/pages/view_csv.html
@@ -10,12 +10,16 @@
   <div class="d-flex align-items-center justify-content-between mb-3">
     <h3 class="m-0">Welcome {{request.user.username}}</h3>
     <div class="button-group d-flex">
-      <a href="/download_csv" class="btn btn-primary d-flex align-items-center"
-        ><i class="bi bi-download"></i>&nbsp;<span>Download CSV</span></a
+      <a href="/compare_csv" class="btn btn-info d-flex align-items-center"
+        ><i class="bi bi-arrow-down-up"></i>&nbsp;<span>Compare CSV</span></a
       >
       &nbsp;&nbsp;&nbsp;
       <a href="/upload_csv" class="btn btn-secondary d-flex align-items-center"
         ><i class="bi bi-upload"></i>&nbsp;<span>Upload CSV</span></a
+      >
+      &nbsp;&nbsp;&nbsp;
+      <a href="/download_csv" class="btn btn-primary d-flex align-items-center"
+        ><i class="bi bi-download"></i>&nbsp;<span>Download CSV</span></a
       >
     </div>
   </div>
