--- a/excel_comp/base/templates/pages/compare_csv.html
+++ b/excel_comp/base/templates/pages/compare_csv.html
@@ -1,4 +1,9 @@
 {% extends 'base.html' %} {% block content %}
+<style>
+  label:last-of-type {
+    margin-top: 20px;
+  }
+</style>
 {% if messages %}
 <ul class="messages">
     {% for message in messages %}
@@ -7,12 +12,14 @@
 </ul>
 {% endif %}
 <form method="POST" enctype="multipart/form-data">
-  <div class="d-block text-center">
-    <h3 class="m-0 p-0 mb-3">Upload CSV</h3>
-  </div>
+    <div class="d-block text-center">
+        <h3 class="m-0 p-0 mb-3">Compare CSV</h3>
+      </div>
   {% csrf_token %} {{form.as_p}}
-  <label for="file">Choose File:</label>
+  <label for="file">Choose File1:</label>
   <input type="file" name="file" id="file" required />
-  <button class="mt-3">Upload</button>
+  <label for="file">Choose File2:</label>
+  <input type="file" name="file" id="file" required />
+  <button class="mt-3">Compare</button>
 </form>
 {% endblock %}
