--- a/excel_comp/base/templates/pages/notfound_page.html
+++ b/excel_comp/base/templates/pages/notfound_page.html
@@ -1,4 +1,4 @@
-{% load static %} {% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} {% block content %} {% load static %}
 <img src="{% static 'images/amico.png' %}" alt="" />
 <p>Oh ohhh....You are lost</p>
 <p><a href="/">click here</a> to go back home</p>
